# guides

./: .gitignore  404.html  README.md  en.json  index.html  mapping.json  mkdocs.yml  pyproject.toml  run_server.sh  sitemap.xml
Assay/: index.html
Examples/: index.html
FAQs/: index.html
Files/: index.html
I10n/: en.json  es.json  zh.json
MAF/: index.html
MetaboLights_account/: index.html
Protocol/: index.html
Sample/: index.html
Study_description/: index.html
Video/: index.html
docs/: Assay.md  Examples.md  FAQs.md  Files.md  Globus.md  MAF.md  MetaboLights_account.md  Protocol.md  Sample.md  Study_description.md  Video.md  index.md
metabolights-editor/: 3rdpartylicenses.txt  index.html  main.058ed4cb921f2c62f100.js  main.80d2ab0c98100dd58a8b.js  main.ad1c9bb7b68615153571.js  main.d9786ecd3b70b1c7a904.js  main.f41b47e68751bfb2929c.js  styles.a33478b88dc1ea90016b.css
metabolights-editor/assets/guides/: I10n  mapping.json  media
scripts/: convertor.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/Assay/: index.html
site/FAQs/: index.html
site/Files/: index.html
site/MAF/: index.html
site/MetaboLights_account/: index.html
site/Protocol/: index.html
site/Sample/: index.html
site/Study_description/: index.html
site/Video/: index.html
