[tool.poetry]
name = "mtbls-guides"
version = "0.1.0"
description = ""
authors = ["ozgury <ozgury@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
mkdocs-material = "^9.5.49"
mkdocs = "^1.6.1"
pydantic = "^2.10.4"
markitdown = "^0.0.1a3"
mkdocs-video = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
